[package]
name = "loans_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-cdk-timers = "0.11"         # Feel free to remove this dependency if you don't need timers
serde = "1.0.210"
ic-stable-structures = "0.6.5"
bitcoin = {version = "0.32.4", features = ["rand"]}
ciborium = "0.2.2"
num-traits = "0.2.19"
ic-btc-interface = "0.2.2"
lazy_static = "1.5.0"
serde_bytes = "0.11.15"
hex = "0.4.3"


[dev-dependencies]
pocket-ic = { git = "https://github.com/dfinity/ic", rev = "6dae2daa1888cc0f4ee191d0dacb7186a6b4570e" }
bitcoincore-rpc = "0.19.0"
